# Mila

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestCustom.cmake  README.md  appveyor.yml  biicode.conf  main.cpp
bbp/: CMakeLists.txt  README.md  main.cpp
bbp/Parallel/: bbp.cl
bbp/Sequential/: main.cpp
bbp/include/: bbp_factories.cpp  bbp_factories.h  bbp_factories.hpp
bbp/parallel/: CMakeLists.txt  bbp.cl  main.cpp
bbp/parallel/include/: bbp_parallel.cpp  bbp_parallel.h  bbp_parallel.hpp  bbp_parallel_app.cpp  bbp_parallel_app.h  bbp_parallel_app.hpp  bbp_parallel_profiler.cpp  bbp_parallel_profiler.h  bbp_parallel_profiler.hpp
bbp/parallel/src/: bbp_parallel.cpp  bbp_parallel_app.cpp  bbp_parallel_profiler.cpp
bbp/parallel/test/: CMakeLists.txt  parallel_bbp_test.cpp  test.cpp
bbp/sequential/: CMakeLists.txt  main.cpp
bbp/sequential/include/: bbp_sequential.cpp  bbp_sequential.h  bbp_sequential.hpp  bbp_sequential_app.cpp  bbp_sequential_app.h  bbp_sequential_app.hpp  bbp_sequential_profiler.cpp  bbp_sequential_profiler.h  bbp_sequential_profiler.hpp
bbp/sequential/src/: bbp_sequential.cpp  bbp_sequential_app.cpp  bbp_sequential_profiler.cpp
bbp/sequential/test/: CMakeLists.txt  sequential_bbp_test.cpp  test.cpp
bbp/src/: bbp_factories.cpp
bbp/test/: CMakeLists.txt  bbp_test.cpp
bbp/utils/: CMakeLists.txt  test_bbp.py
bbp/utils/include/: bbp.cpp  bbp.h  bbp.hpp  bbp_utils.cpp  bbp_utils.h  bbp_utils.hpp  utils.cpp
bbp/utils/src/: bbp.cpp  bbp_utils.cpp
bbp/utils/test/: CMakeLists.txt  test.cpp
mean_shift/: CMakeLists.txt  README.md  main.cpp
mean_shift/image_processing/: CMakeLists.txt
mean_shift/image_processing/include/: mean_shift_image_processing.cpp  mean_shift_image_processing.h  mean_shift_image_processing.hpp  mean_shift_image_processing_app.cpp  mean_shift_image_processing_app.h  mean_shift_image_processing_app.hpp  mean_shift_image_processing_profiler.cpp  mean_shift_image_processing_profiler.h  mean_shift_image_processing_profiler.hpp
mean_shift/image_processing/src/: mean_shift_image_processing.cpp  mean_shift_image_processing_app.cpp  mean_shift_image_processing_profiler.cpp
mean_shift/image_processing/test/: CMakeLists.txt  mean_shift_image_processing_test.cpp
mean_shift/include/: mean_shift_factories.cpp  mean_shift_factories.h  mean_shift_factories.hpp
mean_shift/parallel/: CMakeLists.txt  main.cpp  mean_shift.cl
mean_shift/parallel/include/: mean_shift_parallel.cpp  mean_shift_parallel.h  mean_shift_parallel.hpp  mean_shift_parallel_app.cpp  mean_shift_parallel_app.h  mean_shift_parallel_app.hpp  mean_shift_parallel_profiler.cpp  mean_shift_parallel_profiler.h  mean_shift_parallel_profiler.hpp
mean_shift/parallel/src/: mean_shift_parallel.cpp  mean_shift_parallel_app.cpp  mean_shift_parallel_profiler.cpp
mean_shift/parallel/test/: CMakeLists.txt  mean_shift_parallel_test.cpp
mean_shift/sequential/: CMakeLists.txt  main.cpp
mean_shift/sequential/include/: mean_shift_sequential.cpp  mean_shift_sequential.h  mean_shift_sequential.hpp  mean_shift_sequential_app.cpp  mean_shift_sequential_app.h  mean_shift_sequential_app.hpp  mean_shift_sequential_profiler.cpp  mean_shift_sequential_profiler.h  mean_shift_sequential_profiler.hpp
mean_shift/sequential/src/: mean_shift_sequential.cpp  mean_shift_sequential_app.cpp  mean_shift_sequential_profiler.cpp
mean_shift/sequential/test/: CMakeLists.txt  mean_shift_sequential_test.cpp
mean_shift/src/: mean_shift_factories.cpp
mean_shift/test/: CMakeLists.txt  mean_shift_test.cpp
mean_shift/utils/: CMakeLists.txt  test_mean_shift.py
mean_shift/utils/include/: mean_shift.cpp  mean_shift.h  mean_shift.hpp  mean_shift_image_processing.cpp  mean_shift_image_processing.h  mean_shift_utils.cpp  mean_shift_utils.h  mean_shift_utils.hpp
mean_shift/utils/src/: mean_shift.cpp  mean_shift_utils.cpp
mean_shift/utils/test/: CMakeLists.txt  mean_shift_utils_test.cpp
n_body/: CMakeLists.txt  README.md  main.cpp
n_body/include/: n_body_factories.cpp  n_body_factories.h  n_body_factories.hpp
n_body/interactive_view/: CMakeLists.txt
n_body/interactive_view/include/: n_body_interactive_view.cpp  n_body_interactive_view.h  n_body_interactive_view.hpp  n_body_interactive_view_app.cpp  n_body_interactive_view_app.h  n_body_interactive_view_app.hpp  n_body_interactive_view_profiler.cpp  n_body_interactive_view_profiler.h  n_body_interactive_view_profiler.hpp
n_body/interactive_view/src/: n_body_interactive_view.cpp  n_body_interactive_view_app.cpp  n_body_interactive_view_profiler.cpp
n_body/interactive_view/test/: CMakeLists.txt  n_body_interactive_view_test.cpp  reference_mouse_positions.txt  reference_particles.txt
n_body/parallel/: CMakeLists.txt  main.cpp  n_body.cl  nbody.cl
n_body/parallel/include/: n_body_parallel.cpp  n_body_parallel.h  (+7 more)
n_body/sequential/: CMakeLists.txt  main.cpp  sample_input.txt
n_body/src/: n_body_factories.cpp
n_body/test/: CMakeLists.txt  n_body_test.cpp
n_body/utils/: CMakeLists.txt  test_n_body.py
ocl2json/: CMakeLists.txt  main.cpp
plugin_manager/: CMakeLists.txt
plugin_manager/include/: plugin_manager.cpp  plugin_manager.h  plugin_manager.hpp
plugin_manager/src/: plugin_manager.cpp
sudoku_solver/parallel/: CMakeLists.txt  main.cpp  sudoku_solver.cl
sudoku_solver/sequential/: CMakeLists.txt  main.cpp
sudoku_solver/utils/: CMakeLists.txt  test_sudoku_solver.py
utils/: CMakeLists.txt
utils/include/: logger.cpp  logger.h  logger.hpp  ocl_app.cpp  ocl_app.h  ocl_app.hpp  ocl_app_profiler.cpp  ocl_app_profiler.h  ocl_app_profiler.hpp  plugin.cpp  plugin.hpp  profiler.cpp  profiler.h  profiler.hpp  statistics.cpp  statistics.h  statistics.hpp  utils.cpp  utils.h  utils.hpp  version.cpp  version.h.in  version.hpp.in
utils/src/: logger.cpp  ocl_app.cpp  ocl_app_profiler.cpp  plugin.cpp  profiler.cpp  statistics.cpp  utils.cpp  version.cpp
utils/test/: CMakeLists.txt  logger_test.cpp  ocl_app_profiler_test.cpp  ocl_app_test.cpp  profiler_test.cpp  statistics_test.cpp  utils_test.cpp  version_test.cpp
(+58 files in other folders)
